--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,7 +17,9 @@ android {
         }
     }
 }
-
+repositories {
+    maven { url "https://jitpack.io" }
+}
 dependencies {
     implementation 'jp.wasabeef:blurry:2.1.1'
     implementation fileTree(include: ['*.jar'], dir: 'libs')
@@ -37,6 +39,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-crash:16.0.0'
     implementation 'com.google.firebase:firebase-storage:16.0.1'
     implementation 'com.firebase:firebase-client-android:2.3.1'
+    implementation 'com.github.PhilJay:MPAndroidChart:v2.2.4'
 
 }
 
