--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
         <activity android:label="Sleepy" android:name=".RegistryActivity" android:theme="@style/AppTheme"/>
         <activity android:label="Sleepy" android:name=".HelpActivity" android:theme="@style/AppTheme"/>
         <activity android:label="Sleepy" android:name=".AlarmActivity" android:theme="@style/AppTheme"/>
+        <activity android:label="Sleepy" android:name=".TimelineActivity" android:theme="@style/AppTheme"/>
 
     </application>
 
